# mattlayman.com

./: .air.toml  .dockerignore  .envrc  .gitignore  .gitmodules  .stylua.toml  AGENTS.md  CNAME  Dockerfile  Makefile  Procfile  README.md  archive.html  config.toml  devto-schedule.json  feed.xml  index.html  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  screen.css  sitemap.txt
.github/: ISSUE_TEMPLATE.md
2013/: a-laymans-walk-through-code.html  all-tapped-out.html  dreaming-in-code.html  its-fun-ok.html  java-a-bad-choice-for-foss.html  markwiki-1-2-released.html  markwiki-1-3-released.html  office-zen.html  ruby-on-rails-tutorial.html  should-you-cp-from-copywriters.html  test-your-packaging.html  zeromq.html
2014/: advanced-rails.html  handroll-1-1-released.html  handroll-website-generator.html  laziness.html  patterns-of-enterprise-application-architecture.html  tappy.html
2015/: ambidextrous.html  blinker.html  d3js-area-chart.html  dotfiles.html  extending-handroll.html  i18n.html  oh-my-zsh.html  phantomjs.html  pygments-lexer.html  setup.py  statsd-graphite.html
2016/: brunch.html  ember-segment.html  handroll-sitemaps-robots.html  readthrough-python-standard-library.html  ship-your-requirements.html
2017/: 12-factor-django-apps.html  2-critical-python-packaging-tools.html  aphantasia.html  cure-imposter-syndrome.html  current-user-jwt.html  django-celery-rollbar.html  ember-rollbar.html  feature-flags-and-waffles.html  necessity-of-software-abstraction.html  no-nitpicking-code-reviews.html  semantic-ui-ember.html  (+11 more)
(+841 files in other folders)
