[project]
name = "mattlayman-com"
version = "0.1.0"
description = "My personal website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=25.1.0",
    "flake8>=7.1.1",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "jinja2>=3.1.5",
    "pip-tools>=7.4.1",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "pyyaml==5.3.1",
    "requests>=2.32.3",
    "typer[all]>=0.15.1",
]
